--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
+    "markdown-it": "^12.2.0",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^7.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
