--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "graphql-request": "^3.6.1",
     "markdown-it": "^12.2.0",
     "next": "12.0.4",
+    "plaiceholder": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-markdown": "^7.1.1"
+    "react-markdown": "^7.1.1",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
