--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-markdown": "^7.1.1",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "swr": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
